fix(ci): add python-bindings feature for Qt tests build
The Qt tests CI job was missing the python-bindings feature when building
with maturin develop, causing 'PyInit__core' export function not found error.

Also revert CI skip markers for test_qt_backend.py and test_qt_lifecycle.py
since these are specifically run in the qt-tests job with QT_QPA_PLATFORM=offscreen.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -244,7 +244,7 @@ jobs:
         shell: bash
         run: |
           uv pip install maturin
-          uv run maturin develop --features "win-webview2,ext-module"
+          uv run maturin develop --features "python-bindings,win-webview2,ext-module"
 
       - name: Install Qt dependencies
         shell: bash
