--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,9 @@ active-win-pos-rs = "0.9"
 # File dialogs
 rfd = "0.16"
 
+# Image processing for window icon (minimal features for PNG loading)
+image = { version = "0.24", default-features = false, features = ["png"] }
+
 # Service discovery
 mdns-sd = "0.17"
 warp = { version = "0.4", features = ["server"] }
