\fix: skip Qt tests requiring QApplication in CI environment\n\n- Add skip_qapp_in_ci marker to Qt signal tests that need QApplication\n- Use CI environment variable for reliable skip detection\n- Add rust-version parameter to build-wheel action for GLIBC compatibility\n- Use Rust 1.80 for Python 3.7 Linux builds (Ubuntu 22.04 GLIBC 2.35)\

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -10,6 +10,10 @@ inputs:
     description: 'Python version to use'
     required: false
     default: '3.10'
+  rust-version:
+    description: 'Rust toolchain version (use older versions for GLIBC compatibility)'
+    required: false
+    default: 'stable'
   maturin-args:
     description: 'Additional arguments for maturin'
     required: false
@@ -57,7 +61,9 @@ runs:
         enable-cache: false
 
     - name: Setup Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ inputs.rust-version }}
 
     - name: Install system dependencies (Ubuntu)
       if: runner.os == 'Linux'
