\fix: downgrade image crate to 0.24 for Rust 1.77+ compatibility
- Downgrade image from 0.25 to 0.24 in auroraview-core
- Disable default features in arboard to avoid image 0.25 dependency
- Update icon utilities to use image 0.24 API (io::Reader, ColorType)
- Fixes pxfm edition2024 requirement that breaks Rust 1.80 builds\

--- a/crates/auroraview-core/Cargo.toml
+++ b/crates/auroraview-core/Cargo.toml
@@ -58,7 +58,8 @@ askama = "0.12"
 active-win-pos-rs = "0.8"
 
 # Image processing (for icon utilities)
-image = { version = "0.25", default-features = false, features = ["png", "ico"] }
+# Note: Using 0.24 for compatibility with Rust 1.77+ (0.25+ requires edition2024 via pxfm)
+image = { version = "0.24", default-features = false, features = ["png", "ico"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
