--- a/crates/auroraview-core/Cargo.toml
+++ b/crates/auroraview-core/Cargo.toml
@@ -32,7 +32,8 @@ rust-embed = "8.5"
 # Serialization (for config and JSON)
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-simd-json = "0.15"
+# Note: Using 0.13 for compatibility with Rust 1.80 (0.15+ requires edition2024)
+simd-json = "0.13"
 
 # MIME type detection
 mime_guess = "2.0"
