--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,6 +24,54 @@ env:
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 
 jobs:
+  # Pre-build binaries for all platforms (runs in parallel)
+  pre-build:
+    name: Pre-build (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install system dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libglib2.0-dev libayatana-appindicator3-dev pkg-config
+
+      - name: Cache Rust
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-prebuild-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-prebuild-
+
+      - name: Build release binaries
+        run: cargo build --release --workspace --all-features
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: prebuild-${{ runner.os }}
+          path: |
+            target/release/*.dll
+            target/release/*.so
+            target/release/*.dylib
+            target/release/auroraview*
+            target/release/deps/
+          retention-days: 1
+          if-no-files-found: warn
+
   # Fast checks that run first (< 2 min)
   quick-checks:
     name: Quick Checks
@@ -307,7 +355,7 @@ jobs:
     name: CLI Build (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
-    needs: [quick-checks]
+    needs: [quick-checks, pre-build]
     strategy:
       fail-fast: false
       matrix:
@@ -321,6 +369,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Download pre-built artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: prebuild-${{ runner.os }}
+          path: target/release/
+        continue-on-error: true
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -332,7 +387,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev
 
-      - name: Build CLI
+      - name: Build CLI (incremental with pre-built deps)
         run: cargo build -p auroraview-cli --release --target ${{ matrix.target }}
 
       - name: Test CLI (--help)
@@ -350,7 +405,7 @@ jobs:
   pr-ready:
     name: PR Ready
     runs-on: ubuntu-latest
-    needs: [quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build]
+    needs: [pre-build, quick-checks, clippy, python-tests, rust-tests, wheel-build, qt-tests, cli-build]
     if: always()
     steps:
       - name: Check results
@@ -359,6 +414,7 @@ jobs:
 
           # Define required jobs
           declare -A jobs=(
+            ["pre-build"]="${{ needs.pre-build.result }}"
             ["quick-checks"]="${{ needs.quick-checks.result }}"
             ["clippy"]="${{ needs.clippy.result }}"
             ["python-tests"]="${{ needs.python-tests.result }}"
