ci: enable artifact reuse between PR checks and release
PR Checks workflow:
- Use release-compatible artifact names (wheels-linux-x86_64, etc.)
- Extend artifact retention to 7 days for release reuse
- Python 3.7 builds on ubuntu-22.04/windows-2019 for compatibility
- Include sdist in macOS wheel build

Release workflow:
- Add check-pr-artifacts job to find recent PR workflow artifacts
- Add reuse-pr-wheels job to download and re-upload PR artifacts
- Fallback to full build if PR artifacts not available
- Add force-rebuild option for manual workflow dispatch

Build-wheels workflow:
- Add reuse-pr-artifacts input for future optimization

This enables release to skip wheel builds when PR checks already
built compatible wheels, significantly reducing release time.

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -12,6 +12,12 @@ on:
       - 'Cargo.lock'
       - 'pyproject.toml'
   workflow_dispatch:
+    inputs:
+      reuse-pr-artifacts:
+        description: 'Reuse artifacts from PR workflow (run_id)'
+        required: false
+        type: string
+        default: ''
   workflow_call:
     inputs:
       test-wheel:
@@ -22,6 +28,11 @@ on:
         required: false
         type: string
         default: '3.11'
+      reuse-pr-artifacts:
+        description: 'Reuse artifacts from PR workflow (run_id)'
+        required: false
+        type: string
+        default: ''
 
 permissions:
   contents: read
