--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release
 
 # This workflow handles both release-please automation and publishing
 # It creates releases when changes are pushed to main, and publishes to PyPI
+# Optimized to reuse pre-built wheels from PR checks when available
 
 on:
   push:
@@ -11,6 +12,12 @@ on:
       - 'v*'
       - 'auroraview-v*' # Support release-please tag format
   workflow_dispatch:
+    inputs:
+      force-rebuild:
+        description: 'Force rebuild wheels instead of reusing PR artifacts'
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   contents: write # Required for creating releases and uploading artifacts
@@ -18,6 +25,7 @@ permissions:
   issues: write # Required for release-please
   id-token: write # Required for PyPI trusted publishing
   attestations: write # Required for artifact attestation
+  actions: read # Required for downloading artifacts from other workflows
 
 jobs:
   # First job: Run release-please to create releases and tags
@@ -35,17 +43,99 @@ jobs:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
-  # Call the build workflow to build wheels (only if release was created)
-  build-wheels:
+  # Try to find and download pre-built wheels from PR checks
+  check-pr-artifacts:
+    name: Check PR Artifacts
+    runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.release_created }}
+    if: ${{ needs.release-please.outputs.release_created && !inputs.force-rebuild }}
+    outputs:
+      artifacts-available: ${{ steps.check.outputs.available }}
+      pr-run-id: ${{ steps.check.outputs.run_id }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Find recent PR workflow run
+        id: check
+        uses: actions/github-script@v7
+        with:
+          script: |
+            // Find the most recent successful PR Checks workflow run for this commit
+            const { data: runs } = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'pr-checks.yml',
+              status: 'success',
+              per_page: 5
+            });
+
+            // Check if any run has our expected artifacts
+            for (const run of runs.workflow_runs) {
+              const { data: artifacts } = await github.rest.actions.listWorkflowRunArtifacts({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: run.id
+              });
+
+              const hasLinux = artifacts.artifacts.some(a => a.name === 'wheels-linux-x86_64');
+              const hasWindows = artifacts.artifacts.some(a => a.name === 'wheels-windows-x64');
+              const hasMacos = artifacts.artifacts.some(a => a.name === 'wheels-macos-universal2-apple-darwin');
+
+              if (hasLinux && hasWindows && hasMacos) {
+                console.log(`Found artifacts in run ${run.id}`);
+                core.setOutput('available', 'true');
+                core.setOutput('run_id', run.id.toString());
+                return;
+              }
+            }
+
+            console.log('No suitable artifacts found, will rebuild');
+            core.setOutput('available', 'false');
+            core.setOutput('run_id', '');
+
+  # Download and re-upload artifacts from PR workflow (if available)
+  reuse-pr-wheels:
+    name: Reuse PR Wheels
+    runs-on: ubuntu-latest
+    needs: [release-please, check-pr-artifacts]
+    if: ${{ needs.check-pr-artifacts.outputs.artifacts-available == 'true' }}
+    strategy:
+      matrix:
+        artifact:
+          - wheels-linux-x86_64
+          - wheels-windows-x64
+          - wheels-macos-universal2-apple-darwin
+          - wheels-linux-x86_64-py37
+          - wheels-windows-x64-py37
+    steps:
+      - name: Download artifact from PR workflow
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.artifact }}
+          path: dist/
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          run-id: ${{ needs.check-pr-artifacts.outputs.pr-run-id }}
+        continue-on-error: true
+
+      - name: Re-upload artifact for release
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact }}
+          path: dist/
+          if-no-files-found: ignore
+          retention-days: 7
+
+  # Fallback: Build wheels if PR artifacts not available
+  build-wheels:
+    needs: [release-please, check-pr-artifacts]
+    if: ${{ needs.release-please.outputs.release_created && (needs.check-pr-artifacts.outputs.artifacts-available != 'true' || inputs.force-rebuild) }}
     uses: ./.github/workflows/build-wheels.yml
     with:
       test-wheel: 'false'
     permissions:
       contents: read
-      actions: write # Required for uploading artifacts
-      id-token: write # Required for artifact attestation
+      actions: write
+      id-token: write
 
   # Build CLI binaries for all platforms
   build-cli:
@@ -56,20 +146,21 @@ jobs:
       contents: read
       actions: write
 
-  # Publish to PyPI - only depends on builds, not tests (tests should pass in PR)
+  # Publish to PyPI - waits for either reused or built wheels
   pypi-publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    needs: [build-wheels]
+    needs: [release-please, check-pr-artifacts, reuse-pr-wheels, build-wheels]
+    if: |
+      always() &&
+      needs.release-please.outputs.release_created &&
+      (needs.reuse-pr-wheels.result == 'success' || needs.build-wheels.result == 'success')
     environment:
       name: pypi
       url: https://pypi.org/p/auroraview
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
-      # Used to upload release artifacts
       contents: write
-      # Used to generate artifact attestation
       attestations: write
 
     steps:
@@ -116,12 +207,15 @@ jobs:
   github-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [release-please, pypi-publish, build-cli]
-    if: ${{ needs.release-please.outputs.release_created }}
+    needs: [release-please, pypi-publish, build-cli, reuse-pr-wheels, build-wheels]
+    if: |
+      always() &&
+      needs.release-please.outputs.release_created &&
+      (needs.reuse-pr-wheels.result == 'success' || needs.build-wheels.result == 'success' || needs.reuse-pr-wheels.result == 'skipped')
     permissions:
-      contents: write # Required for creating releases
-      actions: read # Required for downloading artifacts
-      attestations: write # Required for artifact attestation
+      contents: write
+      actions: read
+      attestations: write
 
     steps:
       - uses: actions/checkout@v4
