--- a/crates/auroraview-cli/Cargo.toml
+++ b/crates/auroraview-cli/Cargo.toml
@@ -24,7 +24,8 @@ auroraview-pack = { path = "../auroraview-pack" }
 
 # Wry for WebView (direct dependency for CLI)
 wry = "0.53"
-tao = "0.34"
+# Note: Using 0.33 for compatibility with Rust 1.80 (0.34+ requires dlopen2 0.8+ which needs edition2024)
+tao = "0.33"
 
 # CLI framework
 clap = { version = "4.5", features = ["derive"] }
