--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ resolver = "2"
 [workspace.package]
 version = "0.3.0" # x-release-please-version
 edition = "2021"
-# CXX-Qt 0.7 requires Rust 1.77+ for cargo:: syntax in build scripts
-rust-version = "1.77"
+# dlopen2 0.8+ requires edition2024 which needs Rust 1.85+
+rust-version = "1.85"
 authors = ["Hal Long <hal.long@outlook.com>"]
 license = "MIT"
 repository = "https://github.com/loonghao/auroraview"
