ci: update all workflows to use Rust 1.85.0 for edition2024 support

--- a/.github/actions/setup-auroraview/action.yml
+++ b/.github/actions/setup-auroraview/action.yml
@@ -44,7 +44,7 @@ runs:
 
     - name: Setup Rust
       id: setup-rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@1.85.0
       with:
         components: ${{ inputs.rust-components }}
 
