--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -13,7 +13,7 @@ inputs:
   rust-version:
     description: 'Rust toolchain version (use older versions for GLIBC compatibility)'
     required: false
-    default: 'stable'
+    default: '1.85.0'
   maturin-args:
     description: 'Additional arguments for maturin'
     required: false
