--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -77,6 +77,7 @@ jobs:
           target: ${{ matrix.target }}
           args: ${{ matrix.os == 'windows-latest' && '--release --out dist --features ext-module,abi3-py38,win-webview2' || (matrix.os == 'macos-latest' && '--release --out dist --sdist --features ext-module,abi3-py38' || '--release --out dist --features ext-module,abi3-py38') }}
           manylinux: off
+          rust-toolchain: '1.90.0'
 
       - name: Upload wheel artifact
         uses: actions/upload-artifact@v4
@@ -135,6 +136,7 @@ jobs:
           target: ${{ matrix.target }}
           args: ${{ contains(matrix.os, 'windows') && '--release --out dist -i python3.7 --features python-bindings,ext-module,win-webview2' || '--release --out dist -i python3.7 --features python-bindings,ext-module' }}
           manylinux: off
+          rust-toolchain: '1.90.0'
 
       - name: Install and test wheel
         shell: bash
