--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -51,9 +51,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@1.90.0
-
       - name: Install system dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
@@ -68,8 +65,8 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-prebuild-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-prebuild-
+          key: ${{ runner.os }}-cargo-prebuild-rust190-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-prebuild-rust190-
 
       - name: Build ABI3 wheel (Python 3.8+)
         uses: PyO3/maturin-action@v1
@@ -77,7 +74,7 @@ jobs:
           target: ${{ matrix.target }}
           args: ${{ matrix.os == 'windows-latest' && '--release --out dist --features ext-module,abi3-py38,win-webview2' || (matrix.os == 'macos-latest' && '--release --out dist --sdist --features ext-module,abi3-py38' || '--release --out dist --features ext-module,abi3-py38') }}
           manylinux: off
-          rust-toolchain: '1.90.0'
+          rust-toolchain: 1.90.0
 
       - name: Upload wheel artifact
         uses: actions/upload-artifact@v4
@@ -110,9 +107,6 @@ jobs:
         with:
           python-version: '3.7'
 
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@1.90.0
-
       - name: Install system dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
@@ -136,7 +130,7 @@ jobs:
           target: ${{ matrix.target }}
           args: ${{ contains(matrix.os, 'windows') && '--release --out dist -i python3.7 --features python-bindings,ext-module,win-webview2' || '--release --out dist -i python3.7 --features python-bindings,ext-module' }}
           manylinux: off
-          rust-toolchain: '1.90.0'
+          rust-toolchain: 1.90.0
 
       - name: Install and test wheel
         shell: bash
