--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -65,8 +65,8 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-prebuild-rust190-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-prebuild-rust190-
+          key: ${{ runner.os }}-cargo-prebuild-v2-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-prebuild-v2-
 
       - name: Build ABI3 wheel (Python 3.8+)
         uses: PyO3/maturin-action@v1
@@ -121,8 +121,8 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-py37-rust190-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-py37-rust190-
+          key: ${{ runner.os }}-cargo-py37-v2-${{ hashFiles('Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-py37-v2-
 
       - name: Build wheel for Python 3.7
         uses: PyO3/maturin-action@v1
