--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -122,8 +122,8 @@ jobs:
         with:
           target: ${{ matrix.target }}
           python-version: '3.7'
-          # Use Rust 1.80 for GLIBC 2.35 compatibility (Ubuntu 22.04)
-          rust-version: '1.80'
+          # Use Rust 1.90.0 for edition2024 support (required by dependencies)
+          rust-version: '1.90.0'
           # Non-abi3 build: use python-bindings without abi3 feature
           maturin-args: '--release --out dist -i python3.7 --features python-bindings,ext-module'
           test-wheel: ${{ inputs.test-wheel }}
