fix(ci): correct PyPI artifact filtering to preserve sdist
- Fix regex to only remove CLI tar.gz files (no version in name)
- Preserve sdist tar.gz files (have version number like auroraview-0.3.1.tar.gz)
- Add explicit removal of CLI binaries by platform pattern
- Add before/after logging for debugging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -197,16 +197,27 @@ jobs:
 
       - name: Remove non-wheel files and Linux wheels (not accepted by PyPI)
         run: |
-          # Remove any non-wheel files (e.g., CLI binaries that might be included)
-          find dist -type f ! -name "*.whl" ! -name "*.tar.gz" -delete || true
-          # Remove CLI tar.gz files (keep only sdist tar.gz which has proper metadata)
-          rm -f dist/auroraview-*.tar.gz 2>/dev/null || true
-          # Keep only the sdist if it exists (it will be named like auroraview-0.3.0.tar.gz)
+          echo "Before cleanup:"
+          ls -la dist/
+          
+          # Remove CLI tar.gz files (they don't have version numbers in the name)
+          # CLI files: auroraview-linux-x64.tar.gz, auroraview-macos-arm64.tar.gz, etc.
+          # sdist file: auroraview-0.3.1.tar.gz (has version number)
+          rm -f dist/auroraview-linux-*.tar.gz || true
+          rm -f dist/auroraview-macos-*.tar.gz || true
+          rm -f dist/auroraview-windows-*.tar.gz || true
+          rm -f dist/auroraview-windows-*.zip || true
+          
+          # Remove any other non-wheel, non-sdist files
+          # Keep only .whl files and versioned .tar.gz (sdist)
+          find dist -type f ! -name "*.whl" ! -name "auroraview-[0-9]*.tar.gz" -delete || true
+          
           # Remove linux_x86_64 wheels as PyPI doesn't accept them
           # These wheels require webkit2gtk at runtime and use non-standard platform tags
           # Linux users should install from GitHub Releases or build from source
           rm -f dist/*-linux_x86_64.whl || true
-          echo "Remaining files for PyPI:"
+          
+          echo "After cleanup (files for PyPI):"
           ls -la dist/
 
       - name: Generate artifact attestation
