fix(ci): align artifact names between build-wheels and release workflows
The root cause of the PyPI wheel issue was artifact name mismatch:
- build-wheel action was appending suffixes like '-Windows-py3.11-x64'
- release.yml expected simple names like 'wheels-windows-x64'

Changes:
- Remove automatic suffix appending in build-wheel action
- Use static artifact names in build-wheels.yml matching pr-checks.yml

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -261,7 +261,7 @@ runs:
       if: inputs.upload-wheel == 'true'
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ inputs.artifact-name }}-${{ runner.os }}-py${{ inputs.python-version }}-${{ inputs.target || 'default' }}
+        name: ${{ inputs.artifact-name }}
         path: dist/
         retention-days: 30
 
