--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -59,7 +59,7 @@ jobs:
           target: ${{ matrix.target }}
           python-version: ${{ inputs.python-version }}
           test-wheel: ${{ inputs.test-wheel }}
-          artifact-name: 'wheels-linux-${{ matrix.target }}'
+          artifact-name: 'wheels-linux-x86_64'
 
   # Windows builds (abi3)
   windows:
@@ -78,7 +78,7 @@ jobs:
           python-version: ${{ inputs.python-version }}
           maturin-args: '--release --out dist --find-interpreter --features ext-module,abi3-py38,win-webview2'
           test-wheel: ${{ inputs.test-wheel }}
-          artifact-name: 'wheels-windows-${{ matrix.target }}'
+          artifact-name: 'wheels-windows-x64'
 
   # macOS builds (abi3)
   macos:
@@ -100,7 +100,7 @@ jobs:
           python-version: ${{ inputs.python-version }}
           maturin-args: '--release --out dist --sdist --find-interpreter --features ext-module,abi3-py38'
           test-wheel: ${{ inputs.test-wheel }}
-          artifact-name: 'wheels-macos-${{ matrix.target }}'
+          artifact-name: 'wheels-macos-universal2-apple-darwin'
 
   # ============================================================================
   # Python 3.7 builds (non-abi3) - Separate wheel for each platform
@@ -127,7 +127,7 @@ jobs:
           # Non-abi3 build: use python-bindings without abi3 feature
           maturin-args: '--release --out dist -i python3.7 --features python-bindings,ext-module'
           test-wheel: ${{ inputs.test-wheel }}
-          artifact-name: 'wheels-linux-${{ matrix.target }}-py37'
+          artifact-name: 'wheels-linux-x86_64-py37'
           # Disable sccache to avoid potential compatibility issues
           use-sccache: 'false'
 
@@ -149,7 +149,7 @@ jobs:
           # Non-abi3 build: use python-bindings without abi3 feature
           maturin-args: '--release --out dist -i python3.7 --features python-bindings,ext-module,win-webview2'
           test-wheel: ${{ inputs.test-wheel }}
-          artifact-name: 'wheels-windows-${{ matrix.target }}-py37'
+          artifact-name: 'wheels-windows-x64-py37'
           # Disable sccache to avoid potential compatibility issues
           use-sccache: 'false'
 
