--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -282,7 +282,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install dist/*.whl
-          pip install pytest pytest-cov qtpy "PySide6<6.7"
+          # PySide6<6.7 doesn't support Python 3.13+, use PySide6>=6.8 for Python 3.13+
+          if python -c "import sys; exit(0 if sys.version_info >= (3, 13) else 1)"; then
+            pip install pytest pytest-cov qtpy "PySide6>=6.8"
+          else
+            pip install pytest pytest-cov qtpy "PySide6<6.7"
+          fi
 
       - name: Verify import
         shell: bash
